# hibob-mcp-readonly

./: .gitignore  .mcpbignore  Brewfile  README.md  install-prerequisites.bat  install-prerequisites.command  manifest.json  pyproject.toml  run.sh
docs/: hibob-service-user-setup.md
hibob_mcp_readonly/: api_client.py  constants.py  field_filter.py  server.py
tests/: conftest.py  test_api_client.py  test_constants.py  test_field_filter.py  test_security.py  test_server.py
